log
Thu 21 Mar 2024 09:04:38 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
61d36df
Thu 21 Mar 2024 09:05:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
4a4cbb3
Thu 21 Mar 2024 09:05:41 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
6ca4744
Thu 21 Mar 2024 09:05:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
a76fbf5
Thu 21 Mar 2024 09:07:50 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
62853c3
Thu 21 Mar 2024 09:10:06 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:81:8: error: redeclaration of ‘dato’ with no linkage
   81 |   int *dato;= (int*)first(L);
      |        ^~~~
exercises.c:80:9: note: previous declaration of ‘dato’ with type ‘int *’
   80 |    int *dato;
      |         ^~~~
exercises.c:81:13: error: expected expression before ‘=’ token
   81 |   int *dato;= (int*)first(L);
      |             ^
Compilation failed
3488a30
Thu 21 Mar 2024 09:10:21 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
18484c9
Thu 21 Mar 2024 09:11:50 PM UTC: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:107:4: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  107 |    destroy_stack(P3);
      |    ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b982aa7
Sat 23 Mar 2024 01:59:51 PM UTC: 
 exercises.c | 10 ----------
 1 file changed, 10 deletions(-)
 tests:  3|2
total_score: 40/70
3668697
Sat 23 Mar 2024 02:01:16 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
daa1950
Sat 23 Mar 2024 02:09:37 PM UTC: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:11: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  121 |       if(P->size == 0){
      |           ^~
exercises.c:127:7: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  127 |   if(P->size == 0){
      |       ^~
Compilation failed
9e9d312
Sat 23 Mar 2024 02:10:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:10: error: implicit declaration of function ‘isEmptyStack’ [-Werror=implicit-function-declaration]
  121 |       if(isEmptyStack(P)){
      |          ^~~~~~~~~~~~
exercises.c:127:7: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  127 |   if(P->size == 0){
      |       ^~
cc1: all warnings being treated as errors
Compilation failed
0fe0796
Sat 23 Mar 2024 02:13:05 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:11: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  121 |       if(P->size == 0){
      |           ^~
exercises.c:128:7: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  128 |   if(P->size == 0){
      |       ^~
Compilation failed
ec7ff8b
Sat 23 Mar 2024 02:13:52 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 50/70
caf10c1
Sat 23 Mar 2024 06:58:54 PM UTC: 
 tests:  6|2
total_score: 50/70
4ccdd52
Sat 23 Mar 2024 07:03:54 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|2
total_score: 50/70
c9b3fd0
Sat 23 Mar 2024 07:05:26 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 50/70
d366163
Sat 23 Mar 2024 07:11:23 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:105:7: error: ‘dato_copia’ may be used uninitialized [-Werror=maybe-uninitialized]
  105 |       push(P2, dato_copia);
      |       ^~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
29065d5
Sat 23 Mar 2024 07:11:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
88999d2
Sat 23 Mar 2024 07:13:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
f4c74d6
Sat 23 Mar 2024 07:15:59 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
2dcc691
Sat 23 Mar 2024 07:17:12 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:26: error: called object ‘top’ is not a function or function pointer
  129 |       char top = *(char*)top(P);
      |                          ^~~
exercises.c:129:12: note: declared here
  129 |       char top = *(char*)top(P);
      |            ^~~
exercises.c:131:12: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{'){
      |            ^~~~
exercises.c:131:49: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{'){
      |                                                 ^~~~
exercises.c:131:61: error: expected ‘)’ before ‘{’ token
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{'){
      |                                                             ^
      |                                                             )
exercises.c:130:9: note: to match this ‘(’
  130 |       if(cadena[i] == ')' && top == '(' || (cadena[i] == ']'
      |         ^
exercises.c:134:5: error: expected expression before ‘}’ token
  134 |     }
      |     ^
Compilation failed
222a621
Sat 23 Mar 2024 07:17:59 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:26: error: called object ‘top’ is not a function or function pointer
  129 |       char top = *(char*)top(P);
      |                          ^~~
exercises.c:129:12: note: declared here
  129 |       char top = *(char*)top(P);
      |            ^~~
exercises.c:131:12: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{')){
      |            ^~~~
exercises.c:131:49: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{')){
      |                                                 ^~~~
Compilation failed
c8d9105
Sat 23 Mar 2024 07:18:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:18: error: called object ‘top’ is not a function or function pointer
  129 |       char top = top(P);
      |                  ^~~
exercises.c:129:12: note: declared here
  129 |       char top = top(P);
      |            ^~~
exercises.c:131:12: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{')){
      |            ^~~~
exercises.c:131:49: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{')){
      |                                                 ^~~~
Compilation failed
d49859c
Sat 23 Mar 2024 07:18:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:18: error: called object ‘top’ is not a function or function pointer
  129 |       char top = top(P);
      |                  ^~~
exercises.c:129:12: note: declared here
  129 |       char top = top(P);
      |            ^~~
exercises.c:130:31: error: invalid type argument of unary ‘*’ (have ‘int’)
  130 |       if((cadena[i] == ')' && *top == '(') || (cadena[i] == ']'
      |                               ^~~~
exercises.c:131:12: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{')){
      |            ^~~~
exercises.c:131:49: error: invalid type argument of unary ‘*’ (have ‘int’)
  131 |         && *top != '[') || (cadena[i] == '}' && *top != '{')){
      |                                                 ^~~~
Compilation failed
388adea
Sat 23 Mar 2024 07:19:08 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:26: error: called object ‘top’ is not a function or function pointer
  129 |       char top = *(char*)top(P);
      |                          ^~~
exercises.c:129:12: note: declared here
  129 |       char top = *(char*)top(P);
      |            ^~~
Compilation failed
c8c53b0
